<resources>
    <string name="app_name">LIP</string>
    <string name="lip">Little Italy Pizzeria</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="search_a_city">Search a city</string>
    <string name="we_need_to_know_your_location_in_order_to_take_your_current_city">We need to know your location in order to take your current city</string>
    <string name="enable_location">Enable Location</string>
    <string name="enable">Enable</string>
    <string name="howdy_user">Howdy, User</string>
    <string name="next_7_days">Next 7 days</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Customer Name</string>
    <string name="nav_header_subtitle">Customer ID</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="food">Foods</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact Us</string>


    <string name="tab_text_1">Pizza</string>
    <string name="tab_text_2">Pasta</string>
    <string name="tab_text_3">Beverages</string>
    <string name="tab_text_4">Desserts</string>
    <string name="product_view">Product View</string>
    <string name="dine_in">Dine In</string>
    <string name="take_away">Take Away</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="get_in_touch">GET IN TOUCH</string>


</resources>