<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/food"
            android:title="@string/food" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/logout" />
    </group>

</menu>
