<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginTopOverlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/login_top_overlay"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txtMailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingStart="@dimen/_20sdp"
            android:textAlignment="textStart"
            android:textSize="45sp"
            android:textColor="@color/loginMainTitleColor"
            android:fontFamily="@font/montserrat_semi_bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/emailCard"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/txtMailTitle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEmailAddress"
                        android:fontFamily="@font/montserrat_medium"
                        android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:importantForAutofill="no"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress|textNoSuggestions"
                        android:textColor="@color/loginMainTitleColor"
                        android:layout_height="@dimen/_30sdp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgEmailStatus"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/caution"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/passwordCard"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/emailCard">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPassword"
                        android:fontFamily="@font/montserrat_medium"
                        android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:textColor="@color/loginMainTitleColor"
                        android:layout_height="@dimen/_30sdp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgPasswordStatus"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/caution"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_centerVertical="true"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:layout_below="@+id/passwordCard"/>

        <RelativeLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/textNavigation"
                android:fontFamily="@font/montserrat_medium"
                android:id="@+id/txtSignUpHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"/>

            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/textNavigation"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@+id/txtSignUpHeading"
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>


        </RelativeLayout>

    </RelativeLayout>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_120sdp"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:src="@drawable/login_bottom_overlay"/>

</RelativeLayout>